# medicoder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
app/: api.py  auth.py  batch_runner.py  config.py  database.py  main.py  models.py
app/graph/: medicoder_pipeline.py  nodes.py  states.py
app/prompts/: clinical_note_extraction_v1.md
app/routers/: __init__.py  auth.py  documents.py
app/schemas/: __init__.py  documents.py
app/services/: __init__.py  clinical_note_parser.py  condition_extractor.py  document_service.py  hcc_evaluator.py
app/utils/: file_loader.py  logger.py  model_config_utils.py  prompt_loader.py  storage.py  text.py
migrations/: env.py
migrations/versions/: 380d6c004a86_initial_schema.py  90499f1de9e4_replace_content_with_file_url.py
tests/: conftest.py  test_nodes.py  test_pipeline.py
ui/: .env.example  .gcloudignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: ErrorMessage.tsx  FileUpload.tsx  HCCBadge.tsx  HistoryPanel.tsx  NoteInput.tsx  ResultsTable.tsx
